# ormrm

./: .coverage  .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
ci/gitlab/: build.yaml  publish.yaml  unit_test.yaml
ci/tools/: build-package.sh  install-dependencies.sh  publish-package.sh
ormrm/: __init__.py  datasource.py  filters.py  models.py  query.py  schema.py  views.py
ormrm/__tests__/: conftest.py  fake_services.py  test_view_async.py  test_view_sync.py
ormrm/plans/: __init__.py  builder.py  plan.py  steps.py
ormrm/views/: __init__.py  core.py  execution.py  planning.py  relations.py  support.py  types.py
tests/: fake_services.py  test_view_async.py  test_view_sync.py
